<resources>
    <string name="app_name">Witcher</string>
    <string name="game_title">The Witcher 3: Wild Hunt</string>
    <string name="release_date">18.05.2015</string>
    <string name="rate_label">Рейтинг</string>
    <string name="rate_value">4.9</string>
    <string name="review_label">Отзывы</string>
    <string name="review_value">4385</string>
    <string name="ratings_label">Оценки</string>
    <string name="ratings_value">7286</string>
    <string name="players_label">Кол-во игроков</string>
    <string name="players_value">24955</string>
    <string name="in_markets">Доступно в магазинах</string>
    <string name="add_to_list_button">Добавить в список</string>
    <string name="platforms_label">Платформы</string>
    <string name="description_label">Описание</string>
    <string name="description_value">«Ведьмак 3: Дикая Охота» — компьютерная игра в жанре action/RPG, разработанная польской студией CD Projekt RED. Выпущенная 19 мая 2015 года на Windows, PlayStation 4 и Xbox One, затем 15 октября 2019 года на Nintendo Switch, она является повествованием, продолжающим игры «Ведьмак» (2007) и «Ведьмак 2: Убийцы королей» (2011). Это третья игра, действие которой происходит в литературной вселенной книжной серии «Ведьмак», созданной польским писателем Анджеем Сапковским, а также последняя, которая повествует о приключениях Геральта из Ривии.

Игра в стиле тёмного фэнтези, мир которой основан на славянской мифологии, повествует о ведьмаке Геральте из Ривии, охотнике на чудовищ, чья приёмная дочь Цири находится в опасности, будучи преследуемой Дикой Охотой — загадочной потусторонней силой, тайна которой раскрывается по ходу игры.Перейти к разделу «#Сюжет» Многие детали сюжета отсылают к книгам, написанным Сапковским, но сюжет остаётся связанным с первыми двумя частями и подводит итог трилогии, начатой первой игрой, вышедшей восемью годами ранее. В отличие от предыдущих игр, действие «Ведьмака 3» происходит в открытом мире и фокусируется на использовании боевых и детективных навыков Геральта для выполнения заказов и изучения окружающей среды. Всё это — часть многоуровневого основного квеста с множеством второстепенных миссий, который может быть пройден с 36 различными концовками.Перейти к разделу «#Игровой процесс» Игра была разработана за три с половиной года с бюджетом, близким к бюджетам AAA-игр больших западных студий. Её создатели хотели подтвердить способность европейских студий разрабатывать качественные ролевые игры, в то время как игра всё дальше и дальше отходит от канонического сюжета литературной саги «Ведьмак», пользующейся большой популярностью в Польше.</string>
    <string name="share_button">Поделиться</string>
</resources>