<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <View
        android:id="@+id/main_horizontal_strip_down"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/main_ratings_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_player_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/players_value"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/main_player_label"
        app:layout_constraintStart_toStartOf="@+id/main_player_label"
        app:layout_constraintTop_toBottomOf="@+id/main_horizontal_strip_up" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_player_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_label"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_guideline_end"
        app:layout_constraintStart_toEndOf="@+id/main_ratings_label"
        app:layout_constraintTop_toBottomOf="@+id/main_player_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_ratings_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ratings_value"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/main_ratings_label"
        app:layout_constraintStart_toStartOf="@+id/main_ratings_label"
        app:layout_constraintTop_toBottomOf="@+id/main_horizontal_strip_up" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_ratings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratings_label"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/main_player_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_review_label"
        app:layout_constraintTop_toBottomOf="@+id/main_ratings_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_review_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/review_value"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/main_review_label"
        app:layout_constraintStart_toStartOf="@+id/main_review_label"
        app:layout_constraintTop_toBottomOf="@+id/main_horizontal_strip_up" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_review_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_label"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/main_ratings_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_rate_label"
        app:layout_constraintTop_toBottomOf="@+id/main_review_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/game_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/main_vertical_guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_vertical_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/release_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/main_title" />

    <ImageView
        android:id="@+id/main_ratings_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_rate_label"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_horizontal_strip_up"
        app:srcCompat="@drawable/ic_action_rate" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rate_value"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/main_rate_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_rate_label"
        app:layout_constraintTop_toBottomOf="@+id/main_horizontal_strip_up" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rate_label"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/main_review_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/main_ratings_icon"
        app:layout_constraintTop_toBottomOf="@+id/main_rate_value" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_markets_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_action_store"
        android:drawableRight="@drawable/ic_action_arrow"
        android:padding="8dp"
        android:text="@string/in_markets"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_horizontal_strip_down" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_vertical_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_addToList_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_action_plus"
        android:text="@string/add_to_list_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_markets_button"
        app:layout_constraintWidth_percent="0.40" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_share_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_action_share"
        android:text="@string/share_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/main_addToList_button"
        app:layout_constraintStart_toEndOf="@+id/main_addToList_button"
        app:layout_constraintTop_toBottomOf="@+id/main_markets_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_platforms_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/platforms_label"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_addToList_button" />

    <HorizontalScrollView
        android:id="@+id/main_platform_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_platforms_label">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:isScrollContainer="true"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Windows" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Linux" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OS X" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xbox 360" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xbox ONE" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xbox X/S" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PlayStation 4" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Playstation 5" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nintendo Switch" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_label"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_platform_list" />

    <ScrollView
        android:id="@+id/main_game_description_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_description_label">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/description_value" />
    </ScrollView>

    <View
        android:id="@+id/main_horizontal_strip_up"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_guideline_end"
        app:layout_constraintStart_toStartOf="@+id/main_vertical_guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/main_release_date" />


</androidx.constraintlayout.widget.ConstraintLayout>